P6C4: safety & backpressure (rate limits, quotas, dedupe, circuit breaker, telemetry)

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,5 +1,5 @@
 current_phase: 6
-current_checkpoint: 3
-checkpoint_title: Decision Journal Unification
+current_checkpoint: 4
+checkpoint_title: Safety & Backpressure
 allow_behavior_change: true
 notes: Bible is append-only; do not overwrite prior phases; append new sections.
