--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,5 +1,5 @@
 current_phase: 6
-current_checkpoint: 4
-checkpoint_title: Safety & Backpressure
+current_checkpoint: 5
+checkpoint_title: Baseline & Tag
 allow_behavior_change: true
 notes: Bible is append-only; do not overwrite prior phases; append new sections.
