--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,6 @@
 phase: 6
-checkpoint: 4
-title: Safety & Backpressure
-description: External-command limits (rate, dedupe, quotas, circuit breaker, telemetry).
-status: active
+checkpoint: 5
+title: Baseline & Tag
+description: Self-contained live + replay baselines using in-process Node-RED simulator; determinism verified.
+status: complete
+tag: v0.35.0-phase6-external
