Finalize Phase 6 documentation

--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -4,3 +4,10 @@ title: Baseline & Tag
 description: Self-contained live + replay baselines proving external control stability and determinism; diagnostics hardened; summary metrics added.
 status: complete
 tag: v0.35.0-phase6-external
+evidence:
+  baselines:
+    - baselines/phase6/C1
+    - baselines/phase6/C2
+    - baselines/phase6/C3
+    - baselines/phase6/C4
+    - baselines/phase6/final
