--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -2,4 +2,5 @@ current_phase: 6
 current_checkpoint: 5
 checkpoint_title: Baseline & Tag
 allow_behavior_change: true
+baseline_hint: baselines/phase6/final
 notes: Bible is append-only; do not overwrite prior phases; append new sections.
