--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,5 @@
 phase: 7
-checkpoint: 2
-title: Vanilla Adapter Skeleton + Determinism Hook
-description: Introduced VanillaAdapter stub, added adapter config flags, seed determinism, and integrated prior nit fixes.
+checkpoint: 3
+title: Action Mapping v1 (Press / Regress / Switch Profile)
+description: Implemented deterministic adapter actions and extended journaling/CSV for bankroll and bets.
 status: active
