--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,5 +1,5 @@
 current_phase: 8
-current_checkpoint: 0
-checkpoint_title: Docs Kickoff & Roadmap Update
-allow_behavior_change: false
+current_checkpoint: 1
+checkpoint_title: CrapsSim Wiring (press/regress) + Snapshot Normalizer + Seed Handoff
+allow_behavior_change: true
 notes: CSC_BIBLE.md edits must always be additive; roadmap file reflects current truth.
