--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,5 @@
 phase: 8
-checkpoint: 3
-title: Line & Come Family + Odds Wiring
-description: Engine-backed pass/don’t, come/dc, and odds verbs with snapshot extensions for flats and odds per point; stub fallback retained.
+checkpoint: 4
+title: Roll & Travel Synchronization
+description: Integrate step_roll with CrapsSim’s roll engine; capture dice, totals, travel, bankroll, and PSO events; extend journaling and normalization for roll events.
 status: active
