P8C5a: route line/come/odds to CrapsSim in live mode; compute bankroll_delta from engine; refresh snapshot; add focused live test

--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,5 @@
 phase: 8
-checkpoint: 5
-title: Full System Integration & Baseline
-description: Complete engine integration with simulate_rounds() and replay harness; produce seeded baseline artifacts; validate deterministic replay parity.
+checkpoint: 5a
+title: Live Engine Wiring — Line/Come/Odds Hotfix
+description: Line/Come/odds verbs routed through engine; bankroll_delta from engine before/after; snapshot updated accordingly.
 status: active
