--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,5 +1,5 @@
 current_phase: 9
-current_checkpoint: 0
-checkpoint_title: Phase 9 Kickoff (Repo Sync)
-allow_behavior_change: false
+current_checkpoint: 1
+checkpoint_title: Come/DC Odds + Field + Hardways
+allow_behavior_change: true
 notes: CSC_BIBLE.md edits must always be additive; roadmap file reflects current truth.
