P9C4: polish error surface, unify rejection handling, add replay and performance sanity with schema tagging

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,5 +1,5 @@
 current_phase: 9
-current_checkpoint: 3
-checkpoint_title: ATS + Capability Truthfulness
+current_checkpoint: 4
+checkpoint_title: Error Surface Polish + Replay/Perf Sanity
 allow_behavior_change: true
 notes: CSC_BIBLE.md edits must always be additive; roadmap file reflects current truth.
