--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,5 +1,4 @@
 current_phase: 9
-current_checkpoint: 4
-checkpoint_title: Error Surface Polish + Replay/Perf Sanity
-allow_behavior_change: true
-notes: CSC_BIBLE.md edits must always be additive; roadmap file reflects current truth.
+current_checkpoint: 5
+checkpoint_title: Docs & Examples Pack (Phase 9 Closeout)
+allow_behavior_change: false
