--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 9.1
-current_checkpoint: 0
-checkpoint_title: Phase 9.1 Kickoff (Repo Sync)
-allow_behavior_change: false
+current_checkpoint: 1
+checkpoint_title: EngineTransport + LocalTransport
+allow_behavior_change: true
