P9.1·C2: implement engine handshake and live capability merge (schema 1.1)

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 9.1
-current_checkpoint: 1
-checkpoint_title: EngineTransport + LocalTransport
+current_checkpoint: 2
+checkpoint_title: Capability Handshake (Engine-Aware)
 allow_behavior_change: true
