P9.1·C5: add universal cancel_bet() alias for between-roll bet removal

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 9.1
-current_checkpoint: 4
-checkpoint_title: HTTP Transport Stub (Optional)
+current_checkpoint: 5
+checkpoint_title: Universal Cancel Bet Alias
 allow_behavior_change: true
