--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,5 @@
 phase: 9.1
-checkpoint: 5
-title: Universal Cancel Bet Alias
-description: Added cancel_bet() verb routing to take_down, remove_odds, or move_bet for between-roll cancellations.
+checkpoint: 6
+title: Grouped Journal Explanations
+description: Added grouped 'why' explanations controlled by run.journal.explain and explain_grouping with batch and explicit grouping support.
 status: active
