P11·C0: initialize Phase 11 (Strategy DSL v1) docs and roadmap; no runtime changes

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
-current_phase: 9.1
-current_checkpoint: 5
-checkpoint_title: Universal Cancel Bet Alias
-allow_behavior_change: true
+current_phase: 11
+current_checkpoint: 0
+checkpoint_title: Docs Kickoff & Roadmap Sync
+allow_behavior_change: false
