--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,5 @@
-phase: 9.1
-checkpoint: 6
-title: Grouped Journal Explanations
-description: Added grouped 'why' explanations controlled by run.journal.explain and explain_grouping with batch and explicit grouping support.
+phase: 11
+checkpoint: 0
+title: Docs Kickoff & Roadmap Sync
+description: Initialized Phase 11 (Strategy DSL v1) documentation and checklist. No runtime changes.
 status: active
