--- a/setup.cfg
+++ b/setup.cfg
@@ -23,3 +23,7 @@ crapssim_control =
     **/*.yaml
     **/*.json
     **/*.md
+
+[options.entry_points]
+console_scripts =
+    csc-parse-dsl = crapssim_control.cli_parse_dsl:main
