--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 11
-current_checkpoint: 0
-checkpoint_title: Docs Kickoff & Roadmap Sync
-allow_behavior_change: false
+current_checkpoint: 1
+checkpoint_title: DSL Schema & Parser
+allow_behavior_change: true
