P11·C3: integrate RuleEngine; evaluate DSL rules per roll and enqueue actions (scope/cooldown/once)

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 11
-current_checkpoint: 2
-checkpoint_title: Expression Evaluator v1
+current_checkpoint: 3
+checkpoint_title: Rule Engine Integration
 allow_behavior_change: true
