P11·C4: add optional DSL trace journaling; record rule evaluations and explanations under –dsl-trace flag

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 11
-current_checkpoint: 3
-checkpoint_title: Rule Engine Integration
+current_checkpoint: 4
+checkpoint_title: Journal + Debug Trace
 allow_behavior_change: true
