--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 11
-current_checkpoint: 4
-checkpoint_title: Journal + Debug Trace
+current_checkpoint: 5
+checkpoint_title: DSL Spec Authoring Helpers
 allow_behavior_change: true
