P11·C6: seeded live vs replay validation for DSL v1; baseline artifacts and schema tags

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ build/
 # Generated baseline artifacts (created by simulate_rounds)
 baselines/*
 !baselines/.keep
+!baselines/**/
+!baselines/**/*.gitkeep
 
 # Default ignore CSV/JSON…
 *.csv
