--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 11
-current_checkpoint: 5
-checkpoint_title: DSL Spec Authoring Helpers
+current_checkpoint: 6
+checkpoint_title: Validation & Baseline (Seeded Integration + Replay)
 allow_behavior_change: true
