--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
-current_phase: 11
-current_checkpoint: 7
-checkpoint_title: DSL Polish (Errors, Templates, Replay Parity)
-allow_behavior_change: true
+current_phase: 12
+current_checkpoint: 0
+checkpoint_title: Docs Kickoff & Roadmap Sync
+allow_behavior_change: false
