--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 12
-current_checkpoint: 0
-checkpoint_title: Docs Kickoff & Roadmap Sync
+current_checkpoint: 1
+checkpoint_title: Risk Policy Schema & Loader
 allow_behavior_change: false
