P12·C2: Policy Engine Core — added deterministic logic for evaluating drawdown, heat, bet caps, and recovery modes.

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 12
-current_checkpoint: 1
-checkpoint_title: Risk Policy Schema & Loader
+current_checkpoint: 2
+checkpoint_title: Policy Engine Core
 allow_behavior_change: false
