--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,5 @@
 phase: 12
-checkpoint: 2
-title: Policy Engine Core
-description: Implement deterministic risk and bankroll evaluation logic using PolicyEngine.
+checkpoint: 3
+title: Integration with Runtime
+description: Routed outgoing actions through PolicyEngine with enforcement flag, policy journal fields, and reporting counters.
 status: active
