--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 12
-current_checkpoint: 2
-checkpoint_title: Policy Engine Core
-allow_behavior_change: false
+current_checkpoint: 4
+checkpoint_title: CLI Flags & Spec Overrides
+allow_behavior_change: true
