--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,5 +1,5 @@
 phase: 12
-checkpoint: 5a
-title: Early Termination (Bankroll/Unactionable)
-description: Added deterministic early-stop logic when bankroll is exhausted or no legal bet can be placed per table mins and policies.
+checkpoint: 6
+title: Validation Baseline & Phase Wrap
+description: Verified deterministic parity of risk policy and early-stop logic across live/replay runs. Baseline artifacts captured and schema stabilized.
 status: active
