P12·C6p: complete surface wiring — CLI overrides, early-stop toggles, report/manifest counters; add parity test for Phase 12 metadata

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 12
-current_checkpoint: 6
-checkpoint_title: Validation Baseline & Phase Wrap
-allow_behavior_change: false
+current_checkpoint: 6p
+checkpoint_title: Surface Wiring & Parity Fixes
+allow_behavior_change: true
