P14C0: Phase 14 kickoff — docs and guardrails for Plugin Extensibility

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
-current_phase: 13
+current_phase: 14
 current_checkpoint: 0
-checkpoint_title: Docs Kickoff & Roadmap Sync
+checkpoint_title: Plugins: Docs & Guardrails
 allow_behavior_change: false
