--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 14
-current_checkpoint: 0
-checkpoint_title: Plugins: Docs & Guardrails
+current_checkpoint: 1
+checkpoint_title: Plugin Manifest & Registry
 allow_behavior_change: false
