P14C3: Runtime binding for plugin verbs/policies + manifest tracing

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 14
-current_checkpoint: 2
-checkpoint_title: Safe Loader & Sandbox Lite
-allow_behavior_change: false
+current_checkpoint: 3
+checkpoint_title: Runtime Binding (verbs & policies)
+allow_behavior_change: true
