--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
 current_phase: 14
-current_checkpoint: 3
-checkpoint_title: Runtime Binding (verbs & policies)
+current_checkpoint: 4
+checkpoint_title: Conveyor Integration & Isolation
 allow_behavior_change: true
