Add orchestration HTTP bridge, UI stub, and docs

--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
-current_phase: 14
-current_checkpoint: 4
-checkpoint_title: Conveyor Integration & Isolation
+current_phase: 15
+current_checkpoint: 5
+checkpoint_title: Orchestration & UI — Baseline & Tag
 allow_behavior_change: true
