--- a/docs/CSC_SNAPSHOT.yaml
+++ b/docs/CSC_SNAPSHOT.yaml
@@ -1,7 +1,7 @@
-phase: 18
-checkpoint: 3
-title: Evo Job Intake (File-Drop + HTTP)
+phase: 19
+checkpoint: 4
+title: DSL MVP — Deterministic Behavior Switching
 description: >
-  Adds opt-in Evo job intake via file-drop watcher and HTTP queue.
-  Idempotency, bundle hash validation, and deterministic seed handling.
+  Adds a minimal rule DSL (WHEN <cond> THEN <verb>) evaluated at legal windows with cooldown/scope.
+  Flag-gated (off by default). Journals decisions.jsonl and echoes capabilities in report.
 status: complete
